backend.log

> backend@1.0.0 dev
> nodemon index.js

[33m[nodemon] 3.1.3[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node index.js`[39m
Starting server on port 8001
node:events:495
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::8001
    at Server.setupListenHandle [as _listen2] (node:net:1817:16)
    at listenInCluster (node:net:1865:12)
    at Server.listen (node:net:1953:7)
    at Function.listen (/home/vikas/Desktop/jobportal-yt/backend/node_modules/express/lib/application.js:635:24)
    at file:///home/vikas/Desktop/jobportal-yt/backend/index.js:92:5
    at ModuleJob.run (node:internal/modules/esm/module_job:195:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1844:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21) {
  code: 'EADDRINUSE',
  errno: -98,
  syscall: 'listen',
  address: '::',
  port: 8001
}

Node.js v18.20.8
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node index.js`[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node index.js`[39m
Starting server on port 8001
Server running at port 8001
mongodb connected successfully
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node index.js`[39m
file:///home/vikas/Desktop/jobportal-yt/backend/routes/ai.route.js:27
import express from "express";
^^^^^^^^^^^^^^

SyntaxError: Identifier 'express' has already been declared
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)

Node.js v18.20.8
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node index.js`[39m
file:///home/vikas/Desktop/jobportal-yt/backend/routes/ai.route.js:2
import { isAuthenticated } from "../middlewares/isAuthenticated.js";
         ^^^^^^^^^^^^^^^
SyntaxError: The requested module '../middlewares/isAuthenticated.js' does not provide an export named 'isAuthenticated'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)

Node.js v18.20.8
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node index.js`[39m
Starting server on port 8001
Server running at port 8001
mongodb connected successfully
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node index.js`[39m
Starting server on port 8001
node:events:495
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::8001
    at Server.setupListenHandle [as _listen2] (node:net:1817:16)
    at listenInCluster (node:net:1865:12)
    at Server.listen (node:net:1953:7)
    at Function.listen (/home/vikas/Desktop/jobportal-yt/backend/node_modules/express/lib/application.js:635:24)
    at file:///home/vikas/Desktop/jobportal-yt/backend/index.js:92:5
    at ModuleJob.run (node:internal/modules/esm/module_job:195:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1844:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21) {
  code: 'EADDRINUSE',
  errno: -98,
  syscall: 'listen',
  address: '::',
  port: 8001
}

Node.js v18.20.8
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
ortal-yt/backend/node_modules/express/lib/application.js:635:24)
    at file:///home/vikas/Desktop/jobportal-yt/backend/index.js:92:5
    at ModuleJob.run (node:internal/modules/esm/module_job:195:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1844:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21) {
  code: 'EADDRINUSE',
  errno: -98,
  syscall: 'listen',
  address: '::',
  port: 8001
}

Node.js v18.20.8
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node index.js`[39m
Starting server on port 8001
node:events:495
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::8001
    at Server.setupListenHandle [as _listen2] (node:net:1817:16)
    at listenInCluster (node:net:1865:12)
    at Server.listen (node:net:1953:7)
    at Function.listen (/home/vikas/Desktop/jobportal-yt/backend/node_modules/express/lib/application.js:635:24)
    at file:///home/vikas/Desktop/jobportal-yt/backend/index.js:92:5
    at ModuleJob.run (node:internal/modules/esm/module_job:195:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1844:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21) {
  code: 'EADDRINUSE',
  errno: -98,
  syscall: 'listen',
  address: '::',
  port: 8001
}

Node.js v18.20.8
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
